--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "build.js",
   "author": "Jason <jason@nosaj.io>",
   "license": "MIT",
+  "scripts": {
+    "test": "browserify spec/*.js | ./node_modules/tape-run/bin/run.js --render='tap-spec'",
+    "start": "node build"
+  },
   "dependencies": {
-    "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.16.0",
-    "rollup": "^0.36.3",
-    "rollup-plugin-babel": "^2.6.1",
-    "rollup-plugin-commonjs": "^5.0.5",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-replace": "^1.1.1",
-    "rollup-watch": "^2.5.0"
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0",
+    "http-server": "^0.9.0",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.2",
+    "tape-run": "^2.1.4"
   }
 }
