--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "test": "browserify spec/*.js | ./node_modules/tape-run/bin/run.js --render='tap-spec'",
     "start": "node build"
   },
-  "dependencies": {
-    "babel-preset-es2015": "^6.16.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.0",
+  "devDependencies": {
     "http-server": "^0.9.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.2",
     "tape-run": "^2.1.4"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.0"
   }
 }
